<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_edge"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="@+id/copyrightTextView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="220dp"
      android:contentDescription="@string/picture_logo"
      android:elevation="20dp"
      android:src="@drawable/ic_logo" />

    <TextView
      android:id="@+id/nameTextView"
      style="@style/TextViewBold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:lines="1"
      android:maxLines="1"
      android:textSize="34sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal3"
      tools:text="Hi Waffiq Aziz" />

    <TextView
      android:id="@+id/messageTextView"
      style="@style/TextViewRegular"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/home_description" />

    <Button
      android:id="@+id/btn_lis_story"
      style="@style/BtnRegular"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/continue_" />

    <Button
      android:id="@+id/btn_logOut"
      style="@style/BtnRegularRed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/logout" />

  </LinearLayout>

  <ImageView
    android:id="@+id/iv_setting"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="@dimen/margin_edge"
    android:contentDescription="@string/change_language"
    android:src="@drawable/ic_setting"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/copyrightTextView"
    style="@style/TextViewRegular"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_edge"
    android:text="@string/dicoding_course"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>