<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/parentRelative"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingHorizontal="@dimen/margin_edge"
  tools:context=".ui.activity.SignInActivity">

  <ImageView
    android:id="@+id/iv_setting"
    style="@style/LanguageButtonStyle"
    android:contentDescription="@string/change_language" />

  <ProgressBar
    android:id="@+id/progress_bar"
    style="@style/ProgressBarStyle"
    tools:visibility="visible" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_gravity="center"
      android:contentDescription="@string/picture_logo"
      android:src="@drawable/ic_logo" />

    <TextView
      style="@style/TextViewBold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:text="@string/sign_in_with_your_account"
      android:textSize="30sp" />

    <com.dicoding.storyapp.ui.customview.MyEditTextEmail
      android:id="@+id/ed_login_email"
      style="@style/EditTextGeneral"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:hint="@string/input_email"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      android:paddingHorizontal="16sp" />

    <com.dicoding.storyapp.ui.customview.MyEditTextPass
      android:id="@+id/ed_login_password"
      style="@style/EditTextGeneral"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="start"
      android:layout_marginTop="16dp"
      android:hint="@string/input_password"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:paddingHorizontal="16sp"
      app:passwordToggleEnabled="true" />

    <com.dicoding.storyapp.ui.customview.MyButtonSignIn
      android:id="@+id/btn_signIn"
      style="@style/BtnRegular"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:contentDescription="@string/login_account"
      android:foreground="?attr/selectableItemBackgroundBorderless"
      tools:text="Sign In" />

    <TextView
      android:id="@+id/btn_open_register"
      style="@style/TextViewBold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:background="@drawable/ripple_rounded_background"
      android:padding="15dp"
      android:text="@string/did_t_have_account"
      android:textColor="@color/blue_300"
      android:textStyle="bold" />

  </LinearLayout>

  <TextView
    android:id="@+id/dicoding_course"
    style="@style/TextViewRegular"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="@dimen/margin_edge"
    android:text="@string/dicoding_course"
    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

</RelativeLayout>