...
  <string name="greeting">Hi %1$s,</string>
  <string name="created_add">Created at %1$s</string>
  <string name="dicoding_course">Dicoding 2025</string>
  <string name="home_description">Post and share your story, share your activities, and get to know other people\'s stories</string>
  <string name="login_account">Login your account</string>
  <string name="continue_">Continue</string>
  <string name="sign_in_success">Sign In Success</string>
  <string name="register_success">Register Success, You can Sign In with your account</string>
  <string name="register_failed">Register Failed</string>
  <string name="upload_failed">Upload Failed</string>
  <string name="upload_success">Upload Success Swipe Up to Refresh</string>
  <string name="sign_in_failed">Sign In Failed</string>
  <string name="log_out_success">Log Out Success</string>
...
