...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    app:layout_constraintTop_toTopOf="@id/toolbar">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_story"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:paddingTop="@dimen/margin_edge"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      tools:listitem="@layout/item_list_story" />
...
